--- a/PR/Pages/Index.cshtml
+++ b/PR/Pages/Index.cshtml
@@ -373,6 +373,114 @@
 
     <!-- end client section -->
 
+<script src="~/lib/jquery/dist/jquery.min.js"></script>
+<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+<script src="~/js/site.js" asp-append-version="true"></script>
+
+<!-- jQery -->
+<script src="~/asset/js/jquery-3.4.1.min.js"></script>
+<!-- popper js -->
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+</script>
+<!-- bootstrap js -->
+<script src="~/asset/js/bootstrap.js"></script>
+<!-- owl slider -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js">
+</script>
+<!-- isotope js -->
+<script src="https://unpkg.com/isotope-layout@3.0.4/dist/isotope.pkgd.min.js"></script>
+<!-- nice select -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-nice-select/1.1.0/js/jquery.nice-select.min.js"></script>
+<!-- custom js -->
+<script src="~/asset/js/custom.js"></script>
+<!-- Google Map -->
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCh39n5U-4IoWpsVGUHWdqB6puEkhRLdmI&callback=myMap">
+</script>
+<!-- End Google Map -->
+
+<script>
+    document.getElementById('searchInput').addEventListener('keyup', function () {
+        const searchTerm = this.value.toLowerCase(); // Lấy giá trị tìm kiếm và chuyển thành chữ thường
+        const menuItems = document.querySelectorAll('.filters-content .box'); // Lấy tất cả các món ăn
+
+        menuItems.forEach(function (item) {
+            const itemName = item.querySelector('h5').textContent.toLowerCase(); // Lấy tên món ăn
+            const itemDescription = item.querySelector('p').textContent.toLowerCase(); // Lấy mô tả món ăn
+
+            // Kiểm tra nếu tên hoặc mô tả chứa từ khóa tìm kiếm
+            if (itemName.includes(searchTerm) || itemDescription.includes(searchTerm)) {
+                item.closest('.col-sm-6, .col-lg-4').style.display = ''; // Hiện item
+            } else {
+                item.closest('.col-sm-6, .col-lg-4').style.display = 'none'; // Ẩn item
+            }
+        });
+    });
+</script>
+
+
+<script>
+    document.querySelectorAll('.filters_menu li').forEach(item => {
+        item.addEventListener('click', function () {
+            const filterValue = this.getAttribute('data-filter');
+            const categoryName = filterValue === "*" ? "" : filterValue.replace('.', '');
+
+            // Gửi yêu cầu AJAX tới backend
+            fetch(`/Index?handler=MenuItems&categoryName=${categoryName}`)
+                .then(response => response.json())
+                .then(data => {
+                    const menuContainer = document.querySelector('.filters-content .row.grid');
+                    menuContainer.innerHTML = ''; // Xóa các item hiện tại
+
+                    if (data.length === 0) {
+                        menuContainer.innerHTML = '<p>No items found for this category.</p>'; // Thông báo nếu không có mục nào
+                    } else {
+                        data.forEach(item => {
+                            const itemHtml = `
+                                            <div class="col-sm-6 col-lg-4 all ${item.categoryName.toLowerCase()}">
+                                                <div class="box">
+                                                    <div>
+                                                        <div class="img-box">
+                                                            <img src="${item.img}" alt="${item.name}" />
+                                                        </div>
+                                                        <div class="detail-box">
+                                                            <h5>${item.name}</h5>
+                                                            <p>${item.description}</p>
+                                                            <div class="options">
+                                                                <h6>$${item.price}</h6>
+                                                                <a href="#">
+                                                            <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 456.029 456.029" style="enable-background:new 0 0 456.029 456.029;" xml:space="preserve">
+                                                            <g>
+                                                            <path d="M345.6,338.862c-29.184,0-53.248,23.552-53.248,53.248c0,29.184,23.552,53.248,53.248,53.248
+                                                                    c29.184,0,53.248-23.552,53.248-53.248C398.336,362.926,374.784,338.862,345.6,338.862z" />
+                                                                </g>
+                                                            <g>
+                                                            <path d="M439.296,84.91c-1.024,0-2.56-0.512-4.096-0.512H112.64l-5.12-34.304C104.448,27.566,84.992,10.67,61.952,10.67H20.48
+                                                                    C9.216,10.67,0,19.886,0,31.15c0,11.264,9.216,20.48,20.48,20.48h41.472c2.56,0,4.608,2.048,5.12,4.608l31.744,216.064
+                                                                    c4.096,27.136,27.648,47.616,55.296,47.616h212.992c26.624,0,49.664-18.944,55.296-45.056l33.28-166.4
+                                                                    C457.728,97.71,450.56,86.958,439.296,84.91z" />
+                                                                </g>
+                                                            <g>
+                                                            <path d="M215.04,389.55c-1.024-28.16-24.576-50.688-52.736-50.688c-29.696,1.536-52.224,26.112-51.2,55.296
+                                                                    c1.024,28.16,24.064,50.688,52.224,50.688h1.024C193.536,443.31,216.576,418.734,215.04,389.55z" />
+                                                                </g>
+                                                            </svg>
+                                                                </a>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>`;
+                            menuContainer.insertAdjacentHTML('beforeend', itemHtml);
+                        });
+                    }
+                })
+                .catch(error => console.error('Error:', error));
+        });
+    });
+</script>
+
+
+
 
 
 
