--- a/PR/Pages/Reservations/Index.cshtml
+++ b/PR/Pages/Reservations/Index.cshtml
@@ -41,7 +41,7 @@
                 @Html.DisplayFor(modelItem => item.Table.Id)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Users.Id)
+                @Html.DisplayFor(modelItem => item.Users.Name)
             </td>
             <td>
                 <a asp-page="./Edit" asp-route-id="@item.Id">Edit</a> |
